--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,5 +12,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false
-  }
+  },
+  "exclude": ["node_modules", "test", "test/**/*.test.ts"]
 }
