--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,5 +13,6 @@
     "experimentalDecorators": true,
     "useDefineForClassFields": false
   },
-  "exclude": ["node_modules", "test", "test/**/*.test.ts"]
+  "exclude": ["node_modules", "test", "test/**/*.test.ts"],
+  "include": ["src/**/*"]
 }
