--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-pino-logger": "^7.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
+    "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/express-pino-logger": "^4.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.3",
     "@vitest/ui": "^3.1.2",
